--- a/templates/device/index/Equipment/statetu/Id/runStatus.html
+++ b/templates/device/index/Equipment/statetu/Id/runStatus.html
@@ -31,7 +31,7 @@ a { color:#333; text-decoration:none; outline:none;}
 .tu{ width:100%;}
 .warp .kg dt{width:100%; margin:0 auto; height:126px; min-width:100px; line-height:130px; margin-bottom:10%;}
 .warp dl{  float:left; text-align:center;width:12%; margin-right:2.2%}
-.warp dl dt{width:100%; margin:0 auto; background:url(/public/static/images/tu1.png) no-repeat center; font-size:1.2em; text-align:center; height:26px; min-width:74px; line-height:26px; margin-bottom:15%;}
+.warp dl dt{width:100%; margin:0 auto; background:url(/static/images/tu1.png) no-repeat center; font-size:1.2em; text-align:center; height:26px; min-width:74px; line-height:26px; margin-bottom:15%;}
 .warp dl dd{position: relative;margin: 0 auto; width:100%;}
 .wk{color:#fff; font-size:1.4em; padding:2%; padding-top:1%;}
 .tishi{color:#F00; font-size:1em; margin：0 auto}
@@ -44,7 +44,8 @@ a { color:#333; text-decoration:none; outline:none;}
 
 
 </style>
-
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
+<script src="/static/js/jquery.cookie.js"></script>
 </head>
 
 <body style="background-color:#0099f9; overflow:hidden">
@@ -52,14 +53,14 @@ a { color:#333; text-decoration:none; outline:none;}
     <div class="warp">
             
             <div class="wk">
-											<img src="/public/static/images/yuan2.png"  class="bd"/>温控灯开
+											<img src="/static/images/yuan2.png"  class="bd"/>温控灯开
 						
 			
 			
 			<p  class="bd2"/>								设备状态：正常制水</p>
 			</div>
 
-            <img src="/public/static/images/tu.png"  class="tu">
+            <img src="/static/images/tu.png"  class="tu">
 
 			
                     
@@ -67,7 +68,7 @@ a { color:#333; text-decoration:none; outline:none;}
                 	<dt>原水泵</dt>
                 	<dd>
                         <div id="imageContainer">
-														<img src="/public/static/images/tu4.png"  class="active" alt="02"  />
+														<img src="/static/images/tu4.png"  class="active" alt="02"  />
 										
 						</div>
                     </dd>
@@ -78,7 +79,7 @@ a { color:#333; text-decoration:none; outline:none;}
                 	<dt>进水阀</dt>
                 	<dd>
                         <div id="imageContainer1">
-														<img src="/public/static/images/tu4.png"  class="active" alt="02"  />
+														<img src="/static/images/tu4.png"  class="active" alt="02"  />
 							                        </div>
                     </dd>
                        <div class="clear"></div>
@@ -89,7 +90,7 @@ a { color:#333; text-decoration:none; outline:none;}
                 	<dd>
                         <div id="imageContainer2">
                 
-														<img src="/public/static/images/tu4.png"  class="active" alt="02"  />
+														<img src="/static/images/tu4.png"  class="active" alt="02"  />
 														
                         </div>
                     </dd>
@@ -100,7 +101,7 @@ a { color:#333; text-decoration:none; outline:none;}
                 	<dt>高压泵</dt>
                 	<dd>
                         <div id="imageContainer3">
-														<img src="/public/static/images/tu4.png"  class="active" alt="02"  />
+														<img src="/static/images/tu4.png"  class="active" alt="02"  />
 							                        </div>
                     </dd>
                        <div class="clear"></div>
@@ -110,7 +111,7 @@ a { color:#333; text-decoration:none; outline:none;}
                 	<dt>冲洗阀</dt>
                 	<dd>
                         <div id="imageContainer4">
-                            							<img src="/public/static/images/tu3.png"  class="active" alt="01"  />
+                            							<img src="/static/images/tu3.png"  class="active" alt="01"  />
 							   
                         </div>
                     </dd>
@@ -121,7 +122,7 @@ a { color:#333; text-decoration:none; outline:none;}
                 	<dt>臭氧器</dt>
                 	<dd>
                         <div id="imageContainer5">
-                            							<img src="/public/static/images/tu3.png"  class="active" alt="01"  />
+                            							<img src="/static/images/tu3.png"  class="active" alt="01"  />
 							                        </div>
                     </dd>
                        <div class="clear"></div>
@@ -131,7 +132,7 @@ a { color:#333; text-decoration:none; outline:none;}
                 	<dd>
                         <div id="imageContainer6" onclick="power2();">
 						<input type="hidden" id="Id" value="47f09cf7-272d-ea11-b0de-fdb4983a349f"/>
-                            <img src="/public/static/images/tu4.png" class="active" alt="01"  />
+                            <img src="/static/images/tu4.png" class="active" alt="01"  />
                            
                         </div>
                     </dd>
@@ -145,7 +146,7 @@ a { color:#333; text-decoration:none; outline:none;}
 					 <input type="hidden" id="Id" value="47f09cf7-272d-ea11-b0de-fdb4983a349f"/>
 													<div id="imageContainer6" onclick="power2();">
 						
-								<img src="/public/static/images/tu2.png" class="active" alt="02"  />
+								<img src="/static/images/tu2.png" class="active" alt="02"  />
 								
 								
 							</div>		
@@ -156,9 +157,9 @@ a { color:#333; text-decoration:none; outline:none;}
                 </dl>
                 
         </div>
-<script src="/public/static/js/jquery-1.7.1.min.js"></script>
-    <script src="/public/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/public/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/jquery-1.7.1.min.js"></script>
+    <script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
 <script>
 var imageObject = {
 	clickSwap : function(obj) {
@@ -239,6 +240,27 @@ function power3(status,title){
             }
         });
     }
+</script>
+<script>
+    
+    $(document).ready(function(){
+        var id = window.location.href.split("/")[8]
+        console.log(id);
+        var url = "/deviceQuery/" + id + "/"
+        $.ajax({
+                type:'GET',
+                url:url,
+                cache: false,
+                beforeSend: function (XMLHttpRequest) {
+                    XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+                },
+                success:function(data){
+                    console.log(data)
+                        
+                }
+        })
+    })
+
 </script>
 </body>
 </html>
