--- a/templates/device/index/Equipment/edit/Id/modify.html
+++ b/templates/device/index/Equipment/edit/Id/modify.html
@@ -15,7 +15,8 @@
         <meta name="format-detection" content="address=no">
         <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
-        <script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script src="/static/js/jquery.min.js" type="text/javascript"></script>
+        <script src="/static/js/jquery.cookie.js"></script>
     </head>
 <body>
     <!--主体-->
@@ -24,7 +25,7 @@
     .none{display:none;}
 	body{ background:url(/static/images/bg.jpg) ;}
 </style>
-        <form id="h-form">
+        <form id="h-form" onsubmit="javascript:return add_submit();">
         <div class="content">
             <header class="page-header1">
                 <a href="javascript:;" onClick="javascript:history.back(-1);"><img src="/static/img/icon_left.png" class="back_img" style="float:left;"/></a>
@@ -35,14 +36,14 @@
                     <div class="equiment_revise_lists">
                         <div class="equiment_revise_list_left equiment_revise_id">设备ID</div>
                         <div class="equiment_revise_list_right equiment_revise_id_inp">
-                            <input type="text" name="DeviceID" value="3000003" placeholder="1432" class="equiment_revise_id_inps" readonly="1" />
+                            <input type="text" name="DeviceID" value="" placeholder="1432" class="equiment_revise_id_inps" readonly="1" />
                         </div>
                     </div>
                     
                     <div class="equiment_revise_lists">
                         <div class="equiment_revise_list_left equiment_revise_name">备注名称</div>
                         <div class="equiment_revise_list_right equiment_revise_name_inp">
-                            <input type="text" name="Remark" value="测试" placeholder="请输入备注名称" class="equiment_revise_name_inps"/>
+                            <input type="text" name="Remark" value="" placeholder="请输入备注名称" class="equiment_revise_name_inps"/>
                         </div>
                     </div>
                                         
@@ -99,7 +100,7 @@
             
             <div class="equipment_btn_keep">
                 <input type="hidden" name="Id" value="066f5e72-3c84-ea11-b0df-87120c3b66e0">
-                <button type="button" class="btn_keep" id="h-submit">保存</button>
+                <button type="submit" class="btn_keep" id="h-submit">保存</button>
             </div>
             <div style="clear: both;"></div>
         </div>
@@ -142,7 +143,51 @@ var SCOPE = {
 </script>
 <script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
-<script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
+<!-- <script src="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script> -->
+<script>
+    var id = window.location.href.split("/")[8]
+    var url = "/deviceQuery/" + id + "/"
+    $('input[name="DeviceID"]').val(id)
+    
+    $(document).ready(function(){
+        $.ajax({
+                type:'GET',
+                url:url,
+                cache: false,
+                beforeSend: function (XMLHttpRequest) {
+                    XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+                },
+                success:function(data){
+                    console.log(data)
+                    $('input[name="Remark"]').val(data["remarks"])  
+                }
+        })
+    })
 
+
+    function add_submit(){
+        var data = $('input[name="Remark"]').val()
+        var id = window.location.href.split("/")[8]
+        url = "/deviceEdit/" + id + "/"
+        alert(data)
+        $.ajax({
+            type:'PATCH',
+            url:url,
+            cache: false,
+            data: {"remarks":data},
+            beforeSend: function (XMLHttpRequest) {
+                XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+                XMLHttpRequest.setRequestHeader("X-CSRFToken",$.cookie("csrftoken"));
+            },
+            success:function(data){
+                console.log(data)
+                dialog.success("参数设置成功")
+            }
+        });
+        return false;
+    }
+        
+
+</script>
 </body>
 </html>
