11-30 update at home

--- a/templates/device/index/index/index.html
+++ b/templates/device/index/index/index.html
@@ -125,7 +125,7 @@
     
         <div class="footerdb">
             <ul>
-                <li class="list"><a href="/index/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
+                <li class="list"><a href="/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
                 <li><a href="/index/Equipment/index.html"><div class="tp2"></div><div class="tp4">设备</div><div class="clear"></div></a></li>
                 <li><a href="/index/index/my.html"><div class="tp3"></div><div class="tp4">我的</div><div class="clear"></div></a></li>
                 <div class="clear"></div>
