--- a/templates/device/index/Equipment/index.html
+++ b/templates/device/index/Equipment/index.html
@@ -16,7 +16,7 @@
 
     <div class="warp">
 		
-        <div class="ej_bt">设备管理<a href="javascript:history.back(-1)" class="fh"><img src="/static/images/fanhui.png" /></a><a href="http://ro.yueshuidz.com/index/Equipment/pclist.html?maxDeviceID=3999999&page=1" class="bx" style="color:#6d08ff">大屏展示</a></div>
+        <div class="ej_bt">设备管理<a href="javascript:history.back(-1)" class="fh"><img src="/static/images/fanhui.png" /></a><a href="/index/Equipment/pclist.html/" class="bx" style="color:#6d08ff">大屏展示</a></div>
          
         <div class="ej_cx">
              <div class="cx_l">设备列表（总量:6台；在线:0台；故障:0台）</div>
