--- a/apps/device/static/css/pccss/style.css
+++ b/apps/device/static/css/pccss/style.css
@@ -17,6 +17,13 @@ body{ background-color: #f2f2f2;}
   float: left;
   box-sizing: border-box;
 }
+.wall-column-mobile {
+  display: block;
+  position: relative;
+  width: 50%;
+  float: left;
+  box-sizing: border-box;
+}
 .article {
   display: block;
   border-radius: 3px;
