关掉首页 故障管理 图标

--- a/templates/device/index/index/index.html
+++ b/templates/device/index/index/index.html
@@ -99,10 +99,10 @@
                 	<img src=" /static/images/li3.png" />
                     售后管理
                 </a></li>
-            	<li><a href="/index/fault/index.html">
+            	<!-- <li><a href="/index/fault/index.html">
                 	<img src=" /static/images/li4.png" />
                     故障管理
-                </a></li>
+                </a></li> -->
 				            	<li><a href="">
                 	<img src=" /static/images/li6.png" />
                     更多
